crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__error_line_number_in_chunks-2.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: err2
---
ParseError {
    kind: InvalidString,
    message: "invalid escape: \\",
    location: Some(
        (
            11,
            13,
        ),
    ),
}
