crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__error_line_number_in_chunks-3.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: err3
---
ParseError {
    kind: Syntax,
    message: "  --> 11:9\n   |\n11 |     let = 2\n   |         ^---\n   |\n   = expected identifier",
    location: Some(
        (
            11,
            9,
        ),
    ),
}
