crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__error_line_number_in_chunks.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: err1
---
ParseError {
    kind: ReservedIdentifier,
    message: "int",
    location: Some(
        (
            6,
            9,
        ),
    ),
}
