crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__match_expression_with_return.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
{
  "version": "V2",
  "ffi_imports": [],
  "facts": [],
  "actions": [],
  "effects": [],
  "structs": [],
  "enums": [],
  "commands": [],
  "functions": [
    {
      "identifier": {
        "name": "f",
        "span": {
          "start": 18,
          "end": 19
        }
      },
      "arguments": [
        {
          "identifier": {
            "name": "n",
            "span": {
              "start": 20,
              "end": 21
            }
          },
          "field_type": {
            "kind": "Int",
            "span": {
              "start": 22,
              "end": 25
            }
          }
        }
      ],
      "return_type": {
        "kind": "Int",
        "span": {
          "start": 27,
          "end": 30
        }
      },
      "statements": [
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "x",
                "span": {
                  "start": 49,
                  "end": 50
                }
              },
              "expression": {
                "kind": {
                  "Match": {
                    "scrutinee": {
                      "kind": {
                        "Identifier": {
                          "name": "n",
                          "span": {
                            "start": 59,
                            "end": 60
                          }
                        }
                      },
                      "span": {
                        "start": 59,
                        "end": 60
                      }
                    },
                    "arms": [
                      {
                        "pattern": {
                          "Values": [
                            {
                              "kind": {
                                "Int": 0
                              },
                              "span": {
                                "start": 79,
                                "end": 80
                              }
                            }
                          ]
                        },
                        "expression": {
                          "kind": {
                            "Int": 1
                          },
                          "span": {
                            "start": 84,
                            "end": 85
                          }
                        },
                        "span": {
                          "start": 79,
                          "end": 102
                        }
                      },
                      {
                        "pattern": {
                          "Values": [
                            {
                              "kind": {
                                "Int": 1
                              },
                              "span": {
                                "start": 102,
                                "end": 103
                              }
                            }
                          ]
                        },
                        "expression": {
                          "kind": {
                            "Block": [
                              [],
                              {
                                "kind": {
                                  "Return": {
                                    "kind": {
                                      "Int": 2
                                    },
                                    "span": {
                                      "start": 117,
                                      "end": 118
                                    }
                                  }
                                },
                                "span": {
                                  "start": 110,
                                  "end": 119
                                }
                              }
                            ]
                          },
                          "span": {
                            "start": 107,
                            "end": 120
                          }
                        },
                        "span": {
                          "start": 102,
                          "end": 137
                        }
                      },
                      {
                        "pattern": {
                          "Default": {
                            "start": 137,
                            "end": 138
                          }
                        },
                        "expression": {
                          "kind": {
                            "Return": {
                              "kind": {
                                "Int": -1
                              },
                              "span": {
                                "start": 149,
                                "end": 151
                              }
                            }
                          },
                          "span": {
                            "start": 142,
                            "end": 164
                          }
                        },
                        "span": {
                          "start": 137,
                          "end": 164
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 53,
                  "end": 165
                }
              }
            }
          },
          "span": {
            "start": 45,
            "end": 178
          }
        },
        {
          "kind": {
            "Expr": {
              "kind": {
                "Return": {
                  "kind": {
                    "Identifier": {
                      "name": "x",
                      "span": {
                        "start": 185,
                        "end": 186
                      }
                    }
                  },
                  "span": {
                    "start": 185,
                    "end": 186
                  }
                }
              },
              "span": {
                "start": 178,
                "end": 195
              }
            }
          },
          "span": {
            "start": 178,
            "end": 195
          }
        }
      ],
      "span": {
        "start": 9,
        "end": 196
      }
    }
  ],
  "finish_functions": [],
  "global_lets": [],
  "text": "\n        function f(n int) int {\n            let x = match n {\n                0 => 1\n                1 => { :return 2 }\n                _ => return -1\n            }\n            return x\n        }\n    "
}
