crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_effect_with_field_insertion.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [
        EffectDefinition {
            identifier: Ident {
                name: "Bar",
                span: 36..39,
            },
            items: [
                StructRef(
                    Ident {
                        name: "Foo",
                        span: 55..58,
                    },
                ),
                Field(
                    EffectFieldDefinition {
                        identifier: Ident {
                            name: "y",
                            span: 72..73,
                        },
                        field_type: VType {
                            kind: Int,
                            span: 74..77,
                        },
                        dynamic: false,
                    },
                ),
            ],
            span: 29..87,
        },
    ],
    structs: [
        StructDefinition {
            identifier: Ident {
                name: "Foo",
                span: 7..10,
            },
            items: [
                Field(
                    FieldDefinition {
                        identifier: Ident {
                            name: "x",
                            span: 13..14,
                        },
                        field_type: VType {
                            kind: Int,
                            span: 15..18,
                        },
                    },
                ),
            ],
            span: 0..20,
        },
    ],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "struct Foo { x int }\n        effect Bar {\n            +Foo,\n            y int\n        }\n        ",
}
