crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_enum_definition.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [],
    enums: [
        EnumDefinition {
            identifier: Ident {
                name: "Color",
                span: 5..10,
            },
            variants: [
                Ident {
                    name: "Red",
                    span: 25..28,
                },
                Ident {
                    name: "Green",
                    span: 42..47,
                },
                Ident {
                    name: "Blue",
                    span: 61..65,
                },
            ],
            span: 0..76,
        },
    ],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "enum Color {\n            Red,\n            Green,\n            Blue,\n        }",
}
