crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_expression_pratt.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: expr_parsed
---
Not(
    FunctionCall(
        FunctionCall {
            identifier: "call" @ 1..5,
            arguments: [
                Not(
                    FunctionCall(
                        FunctionCall {
                            identifier: "add" @ 7..10,
                            arguments: [
                                Int(
                                    3 @ 11..12,
                                ) @ 11..12,
                                Int(
                                    7 @ 14..15,
                                ) @ 14..15,
                            ],
                        },
                    ) @ 7..16,
                ) @ 6..16,
                FunctionCall(
                    FunctionCall {
                        identifier: "saturating_sub" @ 18..32,
                        arguments: [
                            Int(
                                0 @ 33..34,
                            ) @ 33..34,
                            Identifier(
                                "b" @ 36..37,
                            ) @ 36..37,
                        ],
                    },
                ) @ 18..38,
                String(
                    "foo{",
                ) @ 40..49,
            ],
        },
    ) @ 1..50,
) @ 0..50
